[workspace]
members = [
    "gameplay-plugins/unreal-movement",
    "slash-example",
    "unreal-api",
    "unreal-api-derive",
    "unreal-ffi",
    "unreal-reflect",
    "unreal-rust-example",
]
#[profile.release]
#debug = true

[profile.release]
# Needed so pdb isn't generated which might block the compilation
strip = "debuginfo"
debug = 0
