[package]
name = "slash-example"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_ecs = "0.8"
log = "0.4"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
unreal-api = { path = "../unreal-api"}
unreal-movement = { path = "../gameplay-plugins/unreal-movement" }
unreal-reflect = { path = "../unreal-reflect" }

[lib]
crate-type = ["cdylib"]
