[package]
name = "unreal-api"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bevy_ecs = "0.8"
glam = "0.21"
log = { version = "0.4.14", features =["std"] }
unreal-api-derive= { path = "../unreal-api-derive" }
unreal-reflect= { path = "../unreal-reflect" }
unreal-ffi= { path = "../unreal-ffi" }
