[package]
name = "unreal-reflect"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

uuid = { version = "0.8", features = ["v4", "serde"] }
unreal-reflect-derive = { path = "../unreal-reflect-derive" }
bevy_ecs = "0.5"
log = "0.4"