[package]
name = "unreal-rust-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unreal-api = { path = "../unreal-api"}
unreal-reflect = { path = "../unreal-reflect" }
bevy_ecs = "0.5"
log = "0.4"

[lib]
crate-type = ["cdylib"]   